Mise a jour taille images

--- a/mainpage/html/projets.html
+++ b/mainpage/html/projets.html
@@ -44,40 +44,38 @@
         <article class="project">
             <img src="../images/project_resultat.webp" class="img-fluid" alt="image project">
         </article>
-        <article class="container-fluid d-flex flex-column justify-content-center align-items-center">
+        <article class="container-fluid d-flex flex-row justify-content-center align-items-center">
             <div class="row row-cols-1 row-cols-md-2 g-4">
-                <div class="col d-flex flex-column justify-content-center align-items-center">
-                    <div class="card border-dark mb-3" style="width: 70%; height:355px;">
+                <div class="col d-flex flex-row flex-wrap justify-content-center align-items-center" style="width: 100%;" ;>
+                    <div class="card border-dark mb-3" style="width: 70%;">
                         <div class="card-header bg-dark text-white border-dark">Reservia</div>
                         <div class="card-body text-dark">
                             <a href="https://reminao.github.io/ReminaOmar_2_22012021/" target="_blank"><img src="../images/reservia.PNG" class="img-fluid rounded-start" alt="Capture reservia"></a>
                         </div>
                         <div class="card-footer bg-light text-dark border-dark">Transformation d'une maquette en un site-web</div>
                     </div> 
-                    <div class="card border-dark mb-3" style="width: 70%; height:355px">
+                    <div class="card border-dark mb-3" style="width: 70%;">
                         <div class="card-header bg-dark text-white border-dark">Orinoco</div>
                         <div class="card-body text-dark">
                             <a href="https://github.com/ReminaO/ReminaOmar_5_06072021" target="_blank"><img src="../images/orinoco.PNG" class="img-fluid rounded-start" alt="capture orinoco"></a>
                         </div>
                         <div class="card-footer bg-light text-dark border-dark">Création du frontend en utilisant une API existante</div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="card border-dark mb-3" style="width: 70%; height:355px">
+                    <div class="card border-dark mb-3" style="width: 70%;">
                         <div class="card-header bg-dark text-white border-dark">Ohmyfood</div>
                         <div class="card-body text-dark">
                             <a href="https://reminao.github.io/ReminaOmar_3_14032021/" target="_blank"><img src="../images/ohmyfood.PNG" class="img-fluid rounded-start" alt="capture ohmyfood"></a>
                         </div>
                         <div class="card-footer bg-light text-dark border-dark">Création d'une application mobile-first, avec utilisation de SASS pour les animations</div>
                     </div>
-                    <div class="card border-dark mb-3" style="width: 70%; height:355px">
+                    <div class="card border-dark mb-3" style="width: 70%;">
                         <div class="card-header bg-dark text-white border-dark">Piiquante</div>
                         <div class="card-body text-dark">
                             <a href="https://github.com/ReminaO/ReminaOmar_6_04082021" target="_blank"><img src="../images/piiquante.png" class="img-fluid rounded-start" alt="capture piiquante"></a>
                         </div>
                         <div class="card-footer bg-light text-dark border-dark">Création d'une API pour un site de comparaison de sauces piquantes</div>
                     </div>
-                <div class="card border-dark mb-3" style="width: 70%; height:355px">
+                <div class="card border-dark mb-3" style="width: 70%;">
                     <div class="card-header bg-dark text-white border-dark">Groupomania</div>
                     <div class="card-body text-dark">
                         <a href="https://github.com/ReminaO/ReminaOmar_7_25082021" target="_blank"><img src="../images/groupomania.png" class="img-fluid rounded-start" alt="capture groupomania"></a>
