--- a/mainpage/html/projets.html
+++ b/mainpage/html/projets.html
@@ -55,18 +55,21 @@
                         <div class="card-footer bg-light text-dark border-dark">Transformation d'une maquette en un site-web</div>
                     </div> 
                     <div class="card border-dark mb-3" style="width: 70%;">
-                        <div class="card-header bg-dark text-white border-dark">Orinoco</div>
-                        <div class="card-body text-dark">
-                            <a href="https://github.com/ReminaO/ReminaOmar_5_06072021" target="_blank"><img src="../images/orinoco.PNG" class="img-fluid rounded-start" alt="capture orinoco"></a>
-                        </div>
-                        <div class="card-footer bg-light text-dark border-dark">Création du frontend en utilisant une API existante</div>
-                    </div>
-                    <div class="card border-dark mb-3" style="width: 70%;">
                         <div class="card-header bg-dark text-white border-dark">Ohmyfood</div>
                         <div class="card-body text-dark">
-                            <a href="https://reminao.github.io/ReminaOmar_3_14032021/" target="_blank"><img src="../images/ohmyfood.PNG" class="img-fluid rounded-start" alt="capture ohmyfood"></a>
+                            <a href="https://reminao.github.io/ReminaOmar_3_14032021/" target="_blank"><img src="../images/ohmyfood.PNG"
+                                    class="img-fluid rounded-start" alt="capture ohmyfood"></a>
                         </div>
-                        <div class="card-footer bg-light text-dark border-dark">Création d'une application mobile-first, avec utilisation de SASS pour les animations</div>
+                        <div class="card-footer bg-light text-dark border-dark">Création d'une application mobile-first, avec utilisation de
+                            SASS pour les animations</div>
+                    </div>
+                    <div class="card border-dark mb-3" style="width: 70%;">
+                        <div class="card-header bg-dark text-white border-dark">Orinoco</div>
+                        <div class="card-body text-dark">
+                            <a href="https://github.com/ReminaO/ReminaOmar_5_06072021" target="_blank"><img src="../images/orinoco.PNG"
+                                    class="img-fluid rounded-start" alt="capture orinoco"></a>
+                        </div>
+                        <div class="card-footer bg-light text-dark border-dark">Création du frontend en utilisant une API existante</div>
                     </div>
                     <div class="card border-dark mb-3" style="width: 70%;">
                         <div class="card-header bg-dark text-white border-dark">Piiquante</div>
