--- a/mainpage/html/projets.html
+++ b/mainpage/html/projets.html
@@ -83,7 +83,8 @@
                     <div class="card-body text-dark">
                         <a href="https://github.com/ReminaO/ReminaOmar_7_25082021" target="_blank"><img src="../images/groupomania.png" class="img-fluid rounded-start" alt="capture groupomania"></a>
                     </div>
-                    <div class="card-footer bg-light text-dark border-dark">Création d'un reseau social d'entreprise de A à Z (Front-ent et Back-end)</div>
+                    <div class="card-footer bg-light text-dark border-dark">Création d'un réseau social d'entreprise de A à Z (Front-ent et
+                        Back-end)</div>
                 </div>
             </div>  
         </article>
