--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./public/css/style.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch&display=swap');
     </style>
