Modification image projets

--- a/projets.html
+++ b/projets.html
@@ -46,7 +46,7 @@
     </header>
     <main>
         <article class="project">
-            <img src="./images/project_resultat.webp" class="img-fluid" alt="image project">
+            <img src="./images/projet_resultat.webp" class="img-fluid" alt="image project">
         </article>
         <article class="container-fluid d-flex flex-row justify-content-center align-items-center">
             <div class="row row-cols-1 row-cols-md-2 g-4">
