--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
         <article class="container-fluid d-flex flex-column justify-content-center align-items-center">
             <div class="description-contact">
                 <h1>Contact</h1>
-                <a href="https://linkedin.com/in/remina-omar-302a3b222" class="linkedin "><i
+                <a href="https://linkedin.com/in/remina-omar" class="linkedin "><i
                         class="bi bi-linkedin align-middle"></i><span>@Rémina_Omar</span></a><br>
                 <a href="mailto:oremina@hotmail.com" class="mail"><i
                         class="bi bi-envelope align-middle"></i><span>oremina@hotmail.com</span></a>
