--- a/contact.html
+++ b/contact.html
@@ -55,8 +55,8 @@
                 <h1>Contact</h1>
                 <a href="https://linkedin.com/in/remina-omar" class="linkedin "><i
                         class="bi bi-linkedin align-middle"></i><span>@Rémina_Omar</span></a><br>
-                <a href="mailto:oremina@hotmail.com" class="mail"><i
-                        class="bi bi-envelope align-middle"></i><span>oremina@hotmail.com</span></a>
+                <a href="mailto:oremina@hotmail.fr" class="mail"><i
+                        class="bi bi-envelope align-middle"></i><span>oremina@hotmail.fr</span></a>
             </div>
 
         </article>
