--- a/parcours.html
+++ b/parcours.html
@@ -59,7 +59,7 @@
                         <li>
                             <h5>09/01/2021 - 05/11/2021 - Formation Développeur Web (Titre RNCP niveau 5) -
                                 OpenClassrooms - Marseille</h5>
-                            <p>J'ai appris à:</p>
+                            <p>Compétences acquises:</p>
                             <ul>
                                 <li>découper, assembler et intégrer tous les éléments d’une maquette graphique en
                                     HTML5 et CSS ;</li>
