--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/main.css" />
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch&display=swap');
     </style>
@@ -20,55 +17,52 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html">Rémina Omar <br>
-                    Développeuse web front-end</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
-                    aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarScroll">
-                    <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./index.html">Accueil</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./projets.html">Projets</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./parcours.html">Parcours</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./contact.html">Contact</a>
-                        </li>
-                    </ul>
+        <nav>
+            <a class="title" href="./index.html">Rémina Omar <br><br>
+                <em class="overflow-ellipsis">Développeuse web front-end</em>
+            </a>
+            <div class="navbar-mobile">
+                <i class="fas fa-bars"></i>
+                <div class="modal">
+                    <div class="navbar-mobile-list">
+                        <a href="./index.html">Accueil</a>
+                        <a href="./projets.html">Projets</a>
+                        <a href="./parcours.html">Parcours</a>
+                        <a href="./contact.html">Contact</a>
+                    </div>
                 </div>
+            </div>
+            <div class="navbar-desktop">
+                <a href="./index.html">Accueil</a>
+                <a href="./projets.html">Projets</a>
+                <a href="./parcours.html">Parcours</a>
+                <a href="./contact.html">Contact</a>
             </div>
         </nav>
     </header>
     <main>
-        <article class="contact">
+        <div class="contact">
             <img src="./images/contact_resultat.webp" class="img-fluid" alt="Machine à écrire contact">
-        </article>
-        <article class="container-fluid d-flex flex-column justify-content-center align-items-center">
-            <div class="description-contact">
-                <h1>Contact</h1>
+        </div>
+        <article class="description-contact">
+            <h1>Contact</h1><br>
+            <div>
                 <a href="https://linkedin.com/in/remina-omar" class="linkedin "><i
-                        class="bi bi-linkedin align-middle"></i><span>@Rémina_Omar</span></a><br>
+                        class="bi bi-linkedin "></i><span>@Rémina_Omar</span></a><br>
                 <a href="mailto:oremina@hotmail.fr" class="mail"><i
-                        class="bi bi-envelope align-middle"></i><span>oremina@hotmail.fr</span></a>
+                        class="bi bi-envelope "></i><span>oremina@hotmail.fr</span></a>
             </div>
 
         </article>
     </main>
-    <footer class="container-fluid signature text-center d-flex flex-row justify-content-center align-items-center">
+    <footer class="signature">
         <i class="far fa-copyright"></i>
         <p>Rémina Omar - 2021</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+        <script src="/js/script.js"></script>
 </body>
 
 </html>
