--- a/parcours.html
+++ b/parcours.html
@@ -5,12 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/main.css" />
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch&display=swap');
     </style>
@@ -19,41 +16,36 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html">Rémina Omar <br>
-                    Développeuse web front-end</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
-                    aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarScroll">
-                    <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./index.html">Accueil</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./projets.html">Projets</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./parcours.html">Parcours</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./contact.html">Contact</a>
-                        </li>
-                    </ul>
+        <nav>
+            <a class="title" href="./index.html">Rémina Omar <br><br>
+                <em class="overflow-ellipsis">Développeuse web front-end</em>
+            </a>
+            <div class="navbar-mobile">
+                <i class="fas fa-bars"></i>
+                <div class="modal">
+                    <div class="navbar-mobile-list">
+                        <a href="./index.html">Accueil</a>
+                        <a href="./projets.html">Projets</a>
+                        <a href="./parcours.html">Parcours</a>
+                        <a href="./contact.html">Contact</a>
+                    </div>
                 </div>
+            </div>
+            <div class="navbar-desktop">
+                <a href="./index.html">Accueil</a>
+                <a href="./projets.html">Projets</a>
+                <a href="./parcours.html">Parcours</a>
+                <a href="./contact.html">Contact</a>
             </div>
         </nav>
     </header>
-    <main>
-        <article class="path">
-            <img src="./images/path_resultat.webp" class="img-fluid" alt="Image Chemin montagneux">
-        </article>
-        <article class="container-fluid">
+    <main class="main-container">
+        <div class="path">
+            <img src="./images/path_resultat.webp" alt="Image Chemin montagneux">
+        </div>
+        <article class="container-path">
             <h1>Mon Parcours</h1><br>
-            <div class="row justify-content-start">
-                <div class="col ">
+                <div>
                     <h2 class="parcours-title">Diplômes et Formations</h2><br>
                     <ul>
                         <li>
@@ -61,18 +53,18 @@
                                 OpenClassrooms - Marseille</h5>
                             <p>Compétences acquises:</p>
                             <ul>
-                                <li>découper, assembler et intégrer tous les éléments d’une maquette graphique en
+                                <li>Découper, assembler et intégrer tous les éléments d’une maquette graphique en
                                     HTML5 et CSS ;</li>
-                                <li>animer les pages web avec CSS3 ;</li>
-                                <li>appliquer les standards du web et les normes en vigueur ;</li>
-                                <li>construire un site web fluide s’adaptant à tout type d’écran (web, smartphone et
+                                <li>Animer les pages web avec CSS3 ;</li>
+                                <li>Appliquer les standards du web et les normes en vigueur ;</li>
+                                <li>Construire un site web fluide s’adaptant à tout type d’écran (web, smartphone et
                                     tablette) ;</li>
-                                <li>faire réagir la page web en fonction des actions de l’utilisateur en JavaScript ;
+                                <li>Faire réagir la page web en fonction des actions de l’utilisateur en JavaScript ;
                                 </li>
-                                <li>se connecter à un service web pour exploiter des données tierces (API) ;</li>
-                                <li>gérer les comptes utilisateurs ;</li>
-                                <li>concevoir un site maintenable grâce à la gestion des erreurs et exceptions ;</li>
-                                <li>créer, gérer et afficher le contenu d’une base de données.</li>
+                                <li>Se connecter à un service web pour exploiter des données tierces (API) ;</li>
+                                <li>Gérer les comptes utilisateurs ;</li>
+                                <li>Concevoir un site maintenable grâce à la gestion des erreurs et exceptions ;</li>
+                                <li>Créer, gérer et afficher le contenu d’une base de données.</li>
                             </ul>
                         </li><br>
                         <li>
@@ -106,22 +98,17 @@
                         <img src="./images/vue.png" alt="Logo vueJs">
                     </div>
                     <div class="vue">
-                        
                         <img src="./images/mysql.png" alt="Logo mysql">
                         <img src="./images/mongo.png" alt="Logo mongo">
                     </div>
-
-                </div>
             </div>
         </article>
     </main>
-    <footer class="container-fluid signature text-center d-flex flex-row justify-content-center align-items-center">
+    <footer class="signature">
         <i class="far fa-copyright"></i>
         <p>Rémina Omar - 2021</p>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+        <script src="/js/script.js"></script>
 </body>
 
 </html>
