--- a/projets.html
+++ b/projets.html
@@ -5,12 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/carousel.css" />
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch&display=swap');
     </style>
@@ -19,103 +17,95 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html">Rémina Omar <br>
-                    Développeuse web front-end</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
-                    aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarScroll">
-                    <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./index.html">Accueil</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./projets.html">Projets</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./parcours.html">Parcours</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./contact.html">Contact</a>
-                        </li>
-                    </ul>
+        <nav>
+            <a class="title" href="./index.html">Rémina Omar <br><br>
+                <em class="overflow-ellipsis">Développeuse web front-end</em>
+            </a>
+            <div class="navbar-mobile">
+                <i class="fas fa-bars"></i>
+                <div class="modal">
+                    <div class="navbar-mobile-list">
+                        <a href="./index.html">Accueil</a>
+                        <a href="./projets.html">Projets</a>
+                        <a href="./parcours.html">Parcours</a>
+                        <a href="./contact.html">Contact</a>
+                    </div>
                 </div>
+            </div>
+            <div class="navbar-desktop">
+                <a href="./index.html">Accueil</a>
+                <a href="./projets.html">Projets</a>
+                <a href="./parcours.html">Parcours</a>
+                <a href="./contact.html">Contact</a>
             </div>
         </nav>
     </header>
     <main>
-        <article class="project">
-            <img src="./images/projet_resultat.webp" class="img-fluid" alt="image project">
-        </article>
-        <article class="container-fluid d-flex flex-row justify-content-center align-items-center">
-            <div class="row row-cols-1 row-cols-md-2 g-4">
-                <div class="col d-flex flex-row flex-wrap justify-content-center align-items-center"
-                    style="width: 100%;" ;>
-                    <div class="card border-dark mb-3" style="width: 70%;">
-                        <div class="card-header bg-dark text-white border-dark">Reservia</div>
-                        <div class="card-body text-dark">
-                            <a href="https://reminao.github.io/ReminaOmar_2_22012021/" target="_blank"><img
-                                    src="./images/reservia.PNG" class="img-fluid rounded-start"
-                                    alt="Capture reservia"></a>
-                        </div>
-                        <div class="card-footer bg-light text-dark border-dark">Transformation d'une maquette en un
-                            site-web</div>
-                    </div>
-                    <div class="card border-dark mb-3" style="width: 70%;">
-                        <div class="card-header bg-dark text-white border-dark">Ohmyfood</div>
-                        <div class="card-body text-dark">
-                            <a href="https://reminao.github.io/ReminaOmar_3_14032021/" target="_blank"><img
-                                    src="./images/ohmyfood.PNG" class="img-fluid rounded-start"
-                                    alt="capture ohmyfood"></a>
-                        </div>
-                        <div class="card-footer bg-light text-dark border-dark">Création d'une application mobile-first,
-                            avec utilisation de
-                            SASS pour les animations</div>
-                    </div>
-                    <div class="card border-dark mb-3" style="width: 70%;">
-                        <div class="card-header bg-dark text-white border-dark">Orinoco</div>
-                        <div class="card-body text-dark">
-                            <a href="https://github.com/ReminaO/ReminaOmar_5_06072021" target="_blank"><img
-                                    src="./images/orinoco.PNG" class="img-fluid rounded-start"
-                                    alt="capture orinoco"></a>
-                        </div>
-                        <div class="card-footer bg-light text-dark border-dark">Création du frontend en utilisant une
-                            API existante</div>
-                    </div>
-                    <div class="card border-dark mb-3" style="width: 70%;">
-                        <div class="card-header bg-dark text-white border-dark">Piiquante</div>
-                        <div class="card-body text-dark">
-                            <a href="https://github.com/ReminaO/ReminaOmar_6_04082021" target="_blank"><img
-                                    src="./images/piiquante.png" class="img-fluid rounded-start"
-                                    alt="capture piiquante"></a>
-                        </div>
-                        <div class="card-footer bg-light text-dark border-dark">Création d'une API pour un site de
-                            comparaison de sauces piquantes</div>
-                    </div>
-                    <div class="card border-dark mb-3" style="width: 70%;">
-                        <div class="card-header bg-dark text-white border-dark">Groupomania</div>
-                        <div class="card-body text-dark">
-                            <a href="https://github.com/ReminaO/ReminaOmar_7_25082021" target="_blank"><img
-                                    src="./images/groupomania.png" class="img-fluid rounded-start"
-                                    alt="capture groupomania"></a>
-                        </div>
-                        <div class="card-footer bg-light text-dark border-dark">Création d'un réseau social d'entreprise
-                            de A à Z (Front-ent et
-                            Back-end)</div>
-                    </div>
-                </div>
-        </article>
+        <div class="project">
+            <img src="./images/projet_resultat.webp" alt="image project">
+        </div>
+        <div class="slideshow-container">
+            <!-- Full-width images with number and caption text -->
+            <div class="mySlides fade">
+                <div class="numbertext">1 / 5</div>
+                <a href="https://reminao.github.io/ReminaOmar_2_22012021/" target="_blank"><img src="./images/reservia.PNG"
+                        style="width: 100%" alt="Capture reservia"></a>
+                <div class="text">Transformation d'une maquette en un
+                    site-web</div>
+            </div>
+            <div class="mySlides fade">
+                <div class="numbertext">2 / 5</div>
+                <a href="https://reminao.github.io/ReminaOmar_3_14032021/" target="_blank"><img src="./images/ohmyfood.PNG"
+                        style="width: 100%" alt="capture ohmyfood"></a>
+                <div class="text">Création d'une application mobile-first,
+                    avec utilisation de
+                    SASS pour les animations</div>
+            </div>
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 5</div>
+                <a href="https://github.com/ReminaO/ReminaOmar_5_06072021" target="_blank"><img src="./images/orinoco.PNG"
+                        style="width: 100%" alt="capture orinoco"></a>
+                <div class="text">Création du frontend en utilisant une
+                    API existante</div>
+            </div>
+            <div class="mySlides fade">
+                <div class="numbertext">4 / 5</div>
+                <a href="https://github.com/ReminaO/ReminaOmar_6_04082021" target="_blank"><img src="./images/piiquante.png"
+                        style="width:100%" alt="capture piiquante"></a>
+                <div class="text">Création d'une API pour un site de
+                    comparaison de sauces piquantes</div>
+            </div>
+            <div class="mySlides fade">
+                <div class="numbertext">5 / 5</div>
+                <a href="https://github.com/ReminaO/ReminaOmar_7_25082021" target="_blank"><img src="./images/groupomania.png"
+                        style="width:100%" alt="capture groupomania"></a>
+                <div class="text">Création d'un réseau social d'entreprise
+                    de A à Z (Front-ent et
+                    Back-end)</div>
+            </div>
+            <!-- Next and previous buttons -->
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+            <br>
+            
+            <!-- The dots/circles -->
+            <div style="text-align:center">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+                <span class="dot" onclick="currentSlide(4)"></span>
+                <span class="dot" onclick="currentSlide(5)"></span>
+            </div>
     </main>
-    <footer class="container-fluid signature text-center d-flex flex-row justify-content-center align-items-center">
+    <footer class="signature">
         <i class="far fa-copyright"></i>
         <p>Rémina Omar - 2021</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+        <script src="/js/script.js"></script>
 </body>
 
 </html>
