Modification de la page projets

--- a/projets.html
+++ b/projets.html
@@ -44,48 +44,56 @@
         <div class="project">
             <img src="./images/projet_resultat.webp" alt="image project">
         </div>
-        <div class="slideshow-container">
-            <!-- Full-width images with number and caption text -->
-            <div class="mySlides fade">
-                <div class="numbertext">1 / 5</div>
-                <a href="https://reminao.github.io/ReminaOmar_2_22012021/" target="_blank"><img src="./images/reservia.PNG"
-                        style="width: 100%" alt="Capture reservia"></a>
-                <div class="text">Transformation d'une maquette en un
-                    site-web</div>
+        <div class="caroussel">
+            <div>
+                <h1>Projets</h1><br>
+                <a href="https://github.com/ReminaO/">
+                    <h2>Projets personnels et projets réalisés dans le cadre de la formation OpenClassrooms (lien Github ici)
+                    </h2>
+                </a>
             </div>
-            <div class="mySlides fade">
-                <div class="numbertext">2 / 5</div>
-                <a href="https://reminao.github.io/ReminaOmar_3_14032021/" target="_blank"><img src="./images/ohmyfood.PNG"
-                        style="width: 100%" alt="capture ohmyfood"></a>
-                <div class="text">Création d'une application mobile-first,
-                    avec utilisation de
-                    SASS pour les animations</div>
-            </div>
-            <div class="mySlides fade">
-                <div class="numbertext">3 / 5</div>
-                <a href="https://github.com/ReminaO/ReminaOmar_5_06072021" target="_blank"><img src="./images/orinoco.PNG"
-                        style="width: 100%" alt="capture orinoco"></a>
-                <div class="text">Création du frontend en utilisant une
-                    API existante</div>
-            </div>
-            <div class="mySlides fade">
-                <div class="numbertext">4 / 5</div>
-                <a href="https://github.com/ReminaO/ReminaOmar_6_04082021" target="_blank"><img src="./images/piiquante.png"
-                        style="width:100%" alt="capture piiquante"></a>
-                <div class="text">Création d'une API pour un site de
-                    comparaison de sauces piquantes</div>
-            </div>
-            <div class="mySlides fade">
-                <div class="numbertext">5 / 5</div>
-                <a href="https://github.com/ReminaO/ReminaOmar_7_25082021" target="_blank"><img src="./images/groupomania.png"
-                        style="width:100%" alt="capture groupomania"></a>
-                <div class="text">Création d'un réseau social d'entreprise
-                    de A à Z (Front-ent et
-                    Back-end)</div>
-            </div>
-            <!-- Next and previous buttons -->
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            <div class="slideshow-container">
+                <!-- Full-width images with number and caption text -->
+                <div class="mySlides fade">
+                    <div class="numbertext">1 / 5</div>
+                    <a href="https://reminao.github.io/ReminaOmar_2_22012021/" target="_blank"><img src="./images/reservia.PNG"
+                            style="width: 100%" alt="Capture reservia"></a>
+                    <div class="text">Transformation d'une maquette en un
+                        site-web</div>
+                </div>
+                <div class="mySlides fade">
+                    <div class="numbertext">2 / 5</div>
+                    <a href="https://reminao.github.io/ReminaOmar_3_14032021/" target="_blank"><img src="./images/ohmyfood.PNG"
+                            style="width: 100%" alt="capture ohmyfood"></a>
+                    <div class="text">Création d'une application mobile-first,
+                        avec utilisation de
+                        SASS pour les animations</div>
+                </div>
+                <div class="mySlides fade">
+                    <div class="numbertext">3 / 5</div>
+                    <a href="https://github.com/ReminaO/ReminaOmar_5_06072021" target="_blank"><img src="./images/orinoco.PNG"
+                            style="width: 100%" alt="capture orinoco"></a>
+                    <div class="text">Création du frontend en utilisant une
+                        API existante</div>
+                </div>
+                <div class="mySlides fade">
+                    <div class="numbertext">4 / 5</div>
+                    <a href="https://github.com/ReminaO/ReminaOmar_6_04082021" target="_blank"><img src="./images/piiquante.png"
+                            style="width:100%" alt="capture piiquante"></a>
+                    <div class="text">Création d'une API pour un site de
+                        comparaison de sauces piquantes</div>
+                </div>
+                <div class="mySlides fade">
+                    <div class="numbertext">5 / 5</div>
+                    <a href="https://github.com/ReminaO/ReminaOmar_7_25082021" target="_blank"><img src="./images/groupomania.png"
+                            style="width:100%" alt="capture groupomania"></a>
+                    <div class="text">Création d'un réseau social d'entreprise
+                        de A à Z (Front-ent et
+                        Back-end)</div>
+                </div>
+                <!-- Next and previous buttons -->
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
             <br>
             
@@ -97,6 +105,7 @@
                 <span class="dot" onclick="currentSlide(4)"></span>
                 <span class="dot" onclick="currentSlide(5)"></span>
             </div>
+        </div>
     </main>
     <footer class="signature">
         <i class="far fa-copyright"></i>
