Ajout du fichier CV et ajout du fichier carousel.js

--- a/parcours.html
+++ b/parcours.html
@@ -44,7 +44,8 @@
             <img src="./images/path_resultat.webp" alt="Image Chemin montagneux">
         </div>
         <article class="container-path">
-            <h1>Mon Parcours</h1><br>
+            <h1>Mon Parcours</h1>
+            <h2><a href="./assets/CV_Rémina_Omar_Frontend.pdf" target="_blank">(Mon CV ici)</a></h2><br>
                 <div>
                     <h2 class="parcours-title">Diplômes et Formations</h2><br>
                     <ul>
