--- a/projets.html
+++ b/projets.html
@@ -47,7 +47,7 @@
         <div class="caroussel">
             <div>
                 <h1>Projets</h1><br>
-                <a href="https://github.com/ReminaO/">
+                <a href="https://github.com/ReminaO/" target="_blank">
                     <h2>Projets personnels et projets réalisés dans le cadre de la formation OpenClassrooms (lien Github ici)
                     </h2>
                 </a>
