Update media queries

--- a/projets.html
+++ b/projets.html
@@ -45,7 +45,7 @@
             <img src="./images/projet_resultat.webp" alt="image project">
         </div>
         <div class="caroussel">
-            <div>
+            <div class="project-title">
                 <h1>Projets</h1><br>
                 <a href="https://github.com/ReminaO/" target="_blank">
                     <h2>Projets personnels et projets réalisés dans le cadre de la formation OpenClassrooms (lien Github ici)
